parallax postion issue: fixed   landing text section: complete   social media icons
  set stellar attribute in js Horizontal scroll: false

  still need to..
   postion header elements
   mobile
   click navigation + smooth scroll

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
+body{
+  background-color: black;
+}
+
+a {
+  text-decoration: none;
+}
+
 .main-container {
   position: relative;
   width: 1200px;
@@ -115,7 +123,7 @@
 /*NEED HEADLIGHTS*/
 
 .badge-container {
-  width: 100%;
+  width: 1200px;
   height: 3000PX;
   /*border: 1px solid cyan;*/
 }
@@ -183,14 +191,16 @@ filter: drop-shadow(-10px 26px 8px #000);
   height: 1300px;
   position: relative;
   background-image: url("../images/showroom-background.jpg");
-  background-size: cover;
+  background-size: 90%;
   background-repeat: no-repeat;
+
 }
 
 .project-wrapper>img {
   width: 340px;
   height: 500px;
   position: absolute;
+  margin-left: 180px;
  /*background-color: lightgreen;*/
 }
 
@@ -259,4 +269,230 @@ filter: drop-shadow(-10px 26px 8px #000);
     bottom: 0px;
     opacity: 1;
     z-index: 3;
+}
+/*/////////  END SHOWCASE     ////////////*/
+
+.contact-container {
+    width: 100%;
+    position: relative;
+    background-image: url(../images/contact-background-desktop-1200x800.jpg);
+    background-size: 90%;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 800px;
+    top: -20px;
+}
+
+.contact-bar-wrapper {
+    width: 100%;
+    height: 240px;
+    overflow: hidden;
+    position: relative;
+    top: -80px;
+    /* left: -8%; */
+    text-align: center;
+    /* border: 1px solid cyan; */
+}
+
+.contact-bar-wrapper span {
+    display: block;
+    width: 2900px;
+    height: 350px;
+    position: absolute;
+    left: -3000px;
+    right: -3000px;
+    top: -350px;
+    bottom: 0;
+    margin: auto;
+    border-radius: 50%;
+    background-color: black;
+    /* border: 1px solid yellow; */
+    z-index: 2;
+}
+
+.contact-bar-wrapper img {
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    top: -22px;
+    width: 150px;
+    z-index: 5;
+}
+
+.info-container {
+    z-index: 2;
+    /* margin-top: -30px; */
+    position: absolute;
+    top: 50px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 90%;
+}
+.info-wrapper {
+  display: inline-block;
+  width: 170px;
+  font-family: 'PT Sans Narrow', sans-serif;
+  font-size: 12pt;
+  color: white;
+  /*z-index: 5;*/
+}
+.info-wrapper:nth-child(1), .info-wrapper:nth-child(2) {
+  float: left;
+  margin-left: 2%;
+  border-left: 1px solid white;
+  padding-left: 25px;
+
+}
+.info-wrapper:nth-child(4), .info-wrapper:nth-child(5) {
+    float: right;
+    margin-right: 2%;
+    border-right: 1px solid white;
+    padding-right: 25px;
+}
+.info-wrapper h3{
+    display: inline-block;
+    width: 25px;
+    height: 20px;
+}
+.info-wrapper:nth-child(1) h3, .info-wrapper:nth-child(2) h3 {
+  float: left;
+}
+.info-wrapper:nth-child(4) h3, .info-wrapper:nth-child(5) h3 {
+  float: right;
+}
+.info-wrapper p {
+  display: inline-block;
+  color: rgb(24,150,255);
+}
+
+
+.contact-content{
+  width: 70%;
+  margin: 0 auto;
+  border: 1px solid lightpurple;
+}
+
+.contact-content h1 {
+    position: relative;
+    top: -90px;
+    width: 80%;
+    margin: -0 auto;
+}
+
+.social-media {
+    text-align: center;
+    position: relative;
+    top: -75px;
+}
+
+.social-media p {
+    width: 70%;
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: 8px;
+    font-size: 18pt;
+    font-weight: 300;
+    color: white;
+    position: relative;
+    margin: -40px auto 60px auto;
+    background-color: black;
+    padding: 16px;
+    clear: right;
+}
+.social-media img {
+    position: relative;
+    bottom: 0px;
+    display: inline-block;
+    width: 67px;
+    padding: 0 15px;
+    transition: .4s;
+    -webkit-transition: .4s;
+}
+
+.social-media img:hover {
+  bottom: 7px
+}
+
+.rodman-ford p {
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: 4px;
+    font-size: 13pt;
+    font-weight: 300;
+    text-align: center;
+    color: white;
+    margin: -10px auto 20px;
+}
+
+.rodman-btn:before {
+    content: '';
+    background-color: rgb(3, 99, 180);
+    position: absolute;
+    width: 300px;
+    height: 63px;
+    top: -2px;
+    right: -310px;
+    bottom: 0;
+    /* left: 0; */
+    transform: skewX(-15deg) rotateX(15deg);
+    -ms-transform: skewX(-15deg) rotateX(15deg);
+    -webkit-transform: skewX(-15deg) rotateX(15deg);
+    z-index: 1;
+    transition: .4s;
+    -webkit-transition: -4s;
+}
+.rodman-btn {
+    position: relative;
+    overflow: hidden;
+    border: 7px solid rgb(3, 99, 180);
+    text-align: center;
+    width: 279px;
+    margin: 10px auto;
+    color: white;
+    cursor: pointer;
+}
+.rodman-btn:hover.rodman-btn:before {
+  right: -11px;
+}
+
+.rodman-ford .rodman-btn p {
+    position: relative;
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: 2px;
+    font-size: 18pt;
+    font-weight: 100;
+    color: white;
+    padding: 24px 0px 0px 0px;
+    /* margin: -20px auto 20px; */
+    text-align: center;
+    z-index: 5;
+}
+
+footer{
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  margin-bottom: 10px;
+  color: white;
+}
+
+footer .address{
+  font-family: 'Oswald', sans-serif;
+  float: right;
+  color: white;
+  font-size: 12pt;
+  line-height: 15px;
+  text-align: right;
+  margin-right: 50px;
+}
+
+footer .store-hours{
+  font-family: 'Oswald', sans-serif;
+  float: left;
+  color: white;
+  line-height: 15px;
+  font-size: 12pt;
+  text-align: left;
+  margin-left: 50px;
 }
